Integrated with Distance and Map for each place

--- a/public/styles/sass/master/_brandguide.scss
+++ b/public/styles/sass/master/_brandguide.scss
@@ -3,7 +3,7 @@
 *********************************/
 
 $brand-font: 'Ubuntu';
-$secondary-font: 'Montserrat';
+$secondary-font: 'Open Sans';
 
 /*********************************
     Brand Color Style
