--- a/views/index.html
+++ b/views/index.html
@@ -3,20 +3,23 @@
     <head>
         <title>Roadtripo</title>
 
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
         <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" media="screen" title="no title">
+        <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css" media="screen" title="no title">
         <link rel="stylesheet" type="text/css" href="styles/css/ngDialog.css">
         <link rel="stylesheet" type="text/css" href="styles/css/ngDialog-theme-plain.css">
         <link rel="stylesheet" href="styles/css/master/global.css" media="screen">
 
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyBll4kPCZuJIaBsvCv_gHCRTzk5-e-8WjM"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-animate.js"></script>
         <script type="text/javascript" src="app/app.js"></script>
         <script type="text/javascript" src="app/factory.js"></script>
         <script type="text/javascript" src="app/services.js"></script>
         <script type="text/javascript" src="app/directives/list-cities/list-cities.js"></script>
         <script type="text/javascript" src="app/directives/my-trips/my-trips.js"></script>
+        <script type="text/javascript" src="app/directives/list-cities/direction-map/direction-map.js"></script>
         <script type="text/javascript" src="javascripts/ngAutocomplete.js"></script>
         <script type="text/javascript" src="javascripts/ngDialog.js"></script>
         <script type="text/javascript" src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
@@ -46,7 +49,7 @@
                                     <h1>Its time for a trip</h1>
                                     <h4>Make a iteneray with RoadTripo and keep travelling.</h4>
                                     <div class="form-group">
-                                        <div class="form-input">                                            
+                                        <div class="form-input">
                                             <input type="text" ng-model="source" ng-autocomplete="source" details="sourceDetails" placeholder="Start"/>
                                             <input type="text" ng-model="destination" ng-autocomplete="destination" details="destinationDetails"  placeholder="Destination"/>
                                         </div>
