--- a/public/styles/sass/master/_external.scss
+++ b/public/styles/sass/master/_external.scss
@@ -27,7 +27,7 @@
 		opacity: 0;
 		border: 10px solid rgba(0,166,205,1);;
 		background: transparent;
-		-webkit-border-radius: 60px;
+		/*-webkit-border-radius: 60px;
 		-moz-border-radius: 60px;
 		border-radius: 60px;
 		-webkit-animation: flash 2s ease-out;
@@ -35,9 +35,9 @@
 		animation: flash 2s ease-out;
     -webkit-animation-iteration-count: infinite;
 		-moz-animation-iteration-count: infinite;
-		animation-iteration-count: infinite;
+		animation-iteration-count: infinite;*/
 	}
-
+/*
   @-moz-keyframes pulse {
 	 0% {-moz-transform: scale(0);opacity: 0.0;}
 	 25% {-moz-transform: scale(0);opacity: 0.1;}
@@ -53,7 +53,7 @@
 	 75% {-webkit-transform: scale(0.5);opacity: 0.5;}
 	 100% {-webkit-transform: scale(1);opacity: 0.0;}
 	}
-
+*/
     .label-start{
         margin-top: 35px;
     }
