--- a/views/signup.html
+++ b/views/signup.html
@@ -6,15 +6,22 @@
     </head>
     <body>
         <form action="/signup" method="post">
+            <div class="form-group">
+    			<label>Name</label>
+    			<input type="text" class="form-control" name="uname">
+    		</div>
     		<div class="form-group">
-    			<label>Username</label>
+    			<label>Email</label>
     			<input type="text" class="form-control" name="username">
     		</div>
     		<div class="form-group">
     			<label>Password</label>
     			<input type="password" class="form-control" name="password">
     		</div>
-
+            <div class="form-group">
+    			<label>Phone</label>
+    			<input type="text" class="form-control" name="userphone">
+    		</div>
     		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
     	</form>
     </body>
