--- a/public/app/components/road-trip/trip-route/trip-route.html
+++ b/public/app/components/road-trip/trip-route/trip-route.html
@@ -18,7 +18,7 @@
                                 <div class="list-places-block">
                                     <div class="masonry-block">
                                         <div class="places-block trip-places-block" ng-repeat="place in tripRoute track by $index">
-                                            <div class="individual-place-block item trip-route" ng-class="{'active': plantrip.indexOf(place) != -1}">
+                                            <div class="individual-place-block item trip-route">
                                                 <div class="individual-place-block-wrapper">
                                                     <div class="add-trip">
                                                         <div class="place-title-block">
